update NeoPredPipe config file

--- a/tools/NeoPredPipe/usr_paths.ini
+++ b/tools/NeoPredPipe/usr_paths.ini
@@ -1,17 +1,17 @@
 [annovar]
-convert2annovar = /Users/schencro/Desktop/Bioinformatics_Tools/annovar/convert2annovar.pl
-annotatevariation = /Users/schencro/Desktop/Bioinformatics_Tools/annovar/annotate_variation.pl
-coding_change = /Users/schencro/Desktop/Bioinformatics_Tools/annovar/coding_change.pl
-gene_table = /Users/schencro/Desktop/Bioinformatics_Tools/annovar/humandb/hg19_refGene.txt
-gene_fasta = /Users/schencro/Desktop/Bioinformatics_Tools/annovar/humandb/hg19_refGeneMrna.fa
-humandb = /Users/schencro/Desktop/Bioinformatics_Tools/annovar/humandb
+convert2annovar = /data1/software/annovar/convert2annovar.pl
+annotatevariation = /data1/software/annovar/annotate_variation.pl
+coding_change = /data1/software/annovar/coding_change.pl
+gene_table = /data1/software/annovar/humandb/hg19_refGene.txt
+gene_fasta = /data1/software/annovar/humandb/hg19_refGeneMrna.fa
+humandb = /data1/software/annovar/humandb
 
 [netMHCpan]
-netMHCpan = /home/fulongfei/workdir/software/netMHCpan-4.0/Linux_x86_64/bin/netMHCpan
+netMHCpan = /data1/workdir/fulongfei/software/netMHCpan
 
 [PeptideMatch]
 peptidematch_jar = /your/path/to/PeptideMatchCMD_1.0.jar
 reference_index = /your/path/to/protein_database/index/
 
 [blast]
-blastp = /Users/schencro/Desktop/Bioinformatics_Tools/ncbi-blast-2.7.1+/bin/blastp
+blastp = /home/fulongfei/miniconda3/bin/blastp
